MOSIP-44120 Corrected surefire and jacoco plugin
Signed-off-by: kameshsr <kameshsr1338@gmail.com>